--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-addons-pure-render-mixin": "^15.6.0",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
